--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.4.2
   cloud_firestore: ^4.5.3
+  fluttertoast: ^8.2.1
 
 dev_dependencies:
   flutter_test:
